--- a/project/bookkeeping/templates/bookkeeping/includes/months_expense_type.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/months_expense_type.html
@@ -1,5 +1,5 @@
 {% load table_cell %}
-<table class="table table-striped table-hover">
+<table class="table table-striped table-hover table-sm">
     <thead class="thead-light">
         <tr>
             <th colspan="5" class="top">Metų balansas</th>
