--- a/project/drinks/templates/drinks/index.html
+++ b/project/drinks/templates/drinks/index.html
@@ -10,19 +10,17 @@
 {% block content %}
 
 {% url 'drinks:drinks_new' as url_drinks %}
-<div class="col-8 pl-0">
-    <div class="row my-2">
-        <div class="col text-right">
-            <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_drinks }}"><i class="fas fa-plus"></i> Įrašą</button>
+<div class="row mt-2">
+    <div class="col-lg-12">
+        <div class="row mt-2">
+            <div class="col-lg-12 text-right">
+                <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_drinks }}"><i class="fas fa-plus"></i> Įrašą</button>
+            </div>
+        </div>
+        <div class="row mt-2">
+            <div id="ajax-content" class="col-lg-12 dblclick">{% include 'drinks/includes/drinks_list.html' %}</div>
         </div>
     </div>
-    <div id="ajax-content" class="dblclick">{% include 'drinks/includes/drinks_list.html' %}</div>
-</div>
-<div class="col-4 px-0">
-    <div class="row my-2">
-        <div class="col text-right"></div>
-    </div>
-    <div id="ajax-content-categories" class="dblclick"></div>
 </div>
 
 <div class="modal fade" id="modal-form">
