spacing between rows

--- a/project/bookkeeping/templates/bookkeeping/index.html
+++ b/project/bookkeeping/templates/bookkeeping/index.html
@@ -26,7 +26,7 @@
 <div class="row mt-2">
     <div class="col-lg-8">
         <!-- accounts stats -->
-        <div class="row">
+        <div class="row mt-2">
             <div class="col-lg-10">
                 <h6>Sąskaitos</h6>
             </div>
@@ -36,12 +36,12 @@
                         class="fas fa-plus"></i> Įrašą</button>
             </div>
         </div>
-        <div class="row">
+        <div class="row mt-2">
             <div id="accounts_worth" class="col dblclick">{{ accounts }}</div>
         </div>
 
         <!-- savings -->
-        <div class="row">
+        <div class="row mt-2">
             <div class="col-lg-10">
                 <h6>Fondų vertė</h6>
             </div>
@@ -50,8 +50,8 @@
                 <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_expenses_new }}"><i class="fas fa-plus"></i> Įrašą</button>
             </div>
         </div>
-        <div class="row">
-            <div id="saving_worth" class="col dblclick">{{ savings }}</div>
+        <div class="row mt-2">
+            <div id="saving_worth" class="col-lg-12 dblclick">{{ savings }}</div>
         </div>
     </div>
 </div>
