--- a/project/bookkeeping/templates/bookkeeping/includes/months_expense_type.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/months_expense_type.html
@@ -3,7 +3,7 @@
 <table class="table table-striped table-hover table-sm">
         <thead class="thead-light">
             <tr>
-                <th colspan="5" class="top">Metų balansas</th>
+                <th colspan="{{ expense_types|length|add:1 }}" class="top">Metų balansas</th>
             </tr>
             <tr>
                 <th width="80rem" class="text-left">{{ request.user.profile.year|title }}</th>
@@ -13,7 +13,7 @@
         <tbody>
             {% for item in expenses  %}
             <tr>
-                <td class="text-left">{{ item|get_item:'date'|date:"F"|title }}</td>
+                <td class="text-left">{{ item.date|date:"F"|title }}</td>
                 {% for cat in expense_types %}
                 {% cell item|get_item:cat %}
                 {% endfor %}
