--- a/project/bookkeeping/templates/bookkeeping/includes/months_expense_type.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/months_expense_type.html
@@ -1,27 +1,39 @@
 {% load table_cell %}{% load template_filters %}
 
 <table class="table table-striped table-hover table-sm">
-        <thead class="thead-light">
-            <tr>
-                <th colspan="{{ expense_types|length|add:1 }}" class="top">Metų balansas</th>
-            </tr>
-            <tr>
-                <th width="80rem" class="text-left">{{ request.user.profile.year|title }}</th>
-                {% for cat in expense_types %}<th>{{ cat }}</th>{% endfor %}
-            </tr>
-        </thead>
-        <tbody>
-            {% for item in expenses  %}
-            <tr>
-                <td class="text-left">{{ item.date|date:"F"|title }}</td>
-                {% for cat in expense_types %}
-                {% cell item|get_item:cat %}
-                {% endfor %}
-            </tr>
+    <thead class="thead-light">
+        <tr>
+            <th colspan="{{ expense_types|length|add:2 }}" class="top">Metų balansas</th>
+        </tr>
+        <tr>
+            <th width="80rem" class="text-left">{{ request.user.profile.year|title }}</th>
+            {% for cat in expense_types %}<th>{{ cat }}</th>{% endfor %}
+            <th>Viso</th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for item in expenses  %}
+        <tr>
+            <td class="text-left">{{ item.date|date:"F"|title }}</td>
+            {% for cat in expense_types %}
+            {% cell item|get_item:cat %}
             {% endfor %}
-        </tbody>
-    </table>
-
+            {% cell item.total %}
+        </tr>
+        {% endfor %}
+    </tbody>
+    <tfoot>
+        <tr>
+            <th class="text-left">Avg</th>
+            {% for cat in expense_types %}{% cell expenses_average|get_item:cat tag='th' %}{% endfor %}
+            {% cell expenses_average.total tag='th' %}
+        </tr>
+        <tr>
+            <th class="text-left">Viso</th>
+            {% for cat in expense_types %}{% cell expenses_totals|get_item:cat tag='th' %}{% endfor %}
+            {% cell expenses_totals.total tag='th' %}
+        </tr>
+    </tfoot>
 </table>
 
 <style>
