--- a/project/bookkeeping/templates/bookkeeping/includes/months_expense_type.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/months_expense_type.html
@@ -3,12 +3,13 @@
 <table class="table table-striped table-hover table-sm">
     <thead class="thead-light">
         <tr>
-            <th colspan="{{ expense_types|length|add:2 }}" class="top">Metų balansas</th>
+            <th colspan="{{ expense_types|length|add:1 }}" class="top">Metų balansas</th>
+            <th class="bl top"></th>
         </tr>
         <tr>
             <th width="80rem" class="text-left">{{ request.user.profile.year|title }}</th>
             {% for cat in expense_types %}<th>{{ cat }}</th>{% endfor %}
-            <th>Viso</th>
+            <th class="bl">Viso</th>
         </tr>
     </thead>
     <tbody>
@@ -18,7 +19,7 @@
             {% for cat in expense_types %}
             {% cell item|get_item:cat %}
             {% endfor %}
-            {% cell item.total %}
+            {% cell item.total css_class="bl" %}
         </tr>
         {% endfor %}
     </tbody>
@@ -26,30 +27,12 @@
         <tr>
             <th class="text-left">Avg</th>
             {% for cat in expense_types %}{% cell expenses_average|get_item:cat tag='th' %}{% endfor %}
-            {% cell expenses_average.total tag='th' %}
+            {% cell expenses_average.total tag='th' css_class="bl" %}
         </tr>
         <tr>
             <th class="text-left">Viso</th>
             {% for cat in expense_types %}{% cell expenses_totals|get_item:cat tag='th' %}{% endfor %}
-            {% cell expenses_totals.total tag='th' %}
+            {% cell expenses_totals.total tag='th' css_class="bl" %}
         </tr>
     </tfoot>
 </table>
-
-<style>
-    td,
-    th {
-        text-align: right !important;
-        padding-right: 1rem !important;
-    }
-
-    tfoot tr th {
-        padding: .25rem !important;
-        font-weight: normal;
-    }
-
-    .top {
-        background-color: lightblue !important;
-        text-align: left !important;
-    }
-</style>
