--- a/project/bookkeeping/templates/bookkeeping/index.html
+++ b/project/bookkeeping/templates/bookkeeping/index.html
@@ -18,9 +18,9 @@
 </div>
 
 <div class="row mt-2" style="background-color:chartreuse">
-    <div class="col-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi imperdiet ligula eu facilisis viverra. Sed quis mi erat. Ut viverra ligula imperdiet, euismod dui in, congue urna. Sed aliquet tortor ac libero maximus, lobortis sollicitudin dolor auctor. Donec mollis non urna et pellentesque. Pellentesque ultricies lacus a eros sodales laoreet. Donec in nulla mattis, consectetur est eget, lacinia tortor. Praesent massa urna, volutpat sed libero vitae, dignissim dignissim ante. Vestibulum at felis gravida, vulputate est vel, porta ex. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nullam volutpat varius cursus. Donec vel facilisis turpis. Sed vitae diam condimentum, luctus libero et, consequat sapien. Aliquam erat volutpat. Phasellus metus elit, eleifend sit amet mattis ac, efficitur non quam.</div>
+    <div class="col-lg-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi imperdiet ligula eu facilisis viverra. Sed quis mi erat. Ut viverra ligula imperdiet, euismod dui in, congue urna. Sed aliquet tortor ac libero maximus, lobortis sollicitudin dolor auctor. Donec mollis non urna et pellentesque. Pellentesque ultricies lacus a eros sodales laoreet. Donec in nulla mattis, consectetur est eget, lacinia tortor. Praesent massa urna, volutpat sed libero vitae, dignissim dignissim ante. Vestibulum at felis gravida, vulputate est vel, porta ex. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nullam volutpat varius cursus. Donec vel facilisis turpis. Sed vitae diam condimentum, luctus libero et, consequat sapien. Aliquam erat volutpat. Phasellus metus elit, eleifend sit amet mattis ac, efficitur non quam.</div>
 
-    <div class="col-7">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi imperdiet ligula eu facilisis viverra. Sed quis mi erat. Ut viverra ligula imperdiet, euismod dui in, congue urna. Sed aliquet tortor ac libero maximus, lobortis sollicitudin dolor auctor. Donec mollis non urna et pellentesque. Pellentesque ultricies lacus a eros sodales laoreet. Donec in nulla mattis, consectetur est eget, lacinia tortor. Praesent massa urna, volutpat sed libero vitae, dignissim dignissim ante. Vestibulum at felis gravida, vulputate est vel, porta ex. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nullam volutpat varius cursus. Donec vel facilisis turpis. Sed vitae diam condimentum, luctus libero et, consequat sapien. Aliquam erat volutpat. Phasellus metus elit, eleifend sit amet mattis ac, efficitur non quam.</div>
+    <div class="col-lg-7">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi imperdiet ligula eu facilisis viverra. Sed quis mi erat. Ut viverra ligula imperdiet, euismod dui in, congue urna. Sed aliquet tortor ac libero maximus, lobortis sollicitudin dolor auctor. Donec mollis non urna et pellentesque. Pellentesque ultricies lacus a eros sodales laoreet. Donec in nulla mattis, consectetur est eget, lacinia tortor. Praesent massa urna, volutpat sed libero vitae, dignissim dignissim ante. Vestibulum at felis gravida, vulputate est vel, porta ex. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nullam volutpat varius cursus. Donec vel facilisis turpis. Sed vitae diam condimentum, luctus libero et, consequat sapien. Aliquam erat volutpat. Phasellus metus elit, eleifend sit amet mattis ac, efficitur non quam.</div>
 </div>
 
 <div class="row mt-2">
@@ -32,8 +32,7 @@
             </div>
             <div class="col-lg-2 text-right">
                 {% url 'bookkeeping:accounts_worth_new' as url_accounts %}
-                <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_accounts }}"><i
-                        class="fas fa-plus"></i> Įrašą</button>
+                <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_accounts }}"><i class="fas fa-plus"></i> Įrašą</button>
             </div>
         </div>
         <div class="row mt-2">
