isntead hardcored style, css class

--- a/project/bookkeeping/templates/bookkeeping/index.html
+++ b/project/bookkeeping/templates/bookkeeping/index.html
@@ -105,8 +105,13 @@
     .br {
         border-right: 3px solid #0359b0!important;
     }
+
     .bl {
         border-left: 3px solid #0359b0!important;
+    }
+
+    .dash {
+        color: #b7b7b6;
     }
 </style>
 {% endblock content %}
