--- a/project/static/css/app_global.css
+++ b/project/static/css/app_global.css
@@ -1,35 +1,83 @@
 body {
-  font-size: .8rem!important;
+  font-size: .75rem!important;
 }
 
-.navbar {
-  padding: .25rem .5rem;
-}
-
-.nav-item {
-  padding: 0;
-  margin: 0;
-}
-
-.dropdown-menu a.dropdown-item {
-  padding-left: .25rem;
-}
-
-.nav-link {
-  padding: .25rem 1rem;
-  margin: .25rem;
-}
-
-.container-fluid>.content {
-  padding: 0 1rem;
+table {
+    border-collapse: collapse;
 }
 
 table td, table th {
-  vertical-align: middle!important;
-  padding-top: .2rem!important;
-  padding-bottom: .2rem!important;
-  padding-left: .50rem!important;
-  padding-right: .50rem!important;
+    border-left: 1px solid #b7b7b6!important;
+    border-right: 1px solid #b7b7b6!important;
+    vertical-align: middle!important;
+    padding-top: .15rem!important;
+    padding-bottom: .15rem!important;
+    padding-left: .50rem!important;
+    padding-right: .50rem!important;
+}
+
+tr td:first-child, tr th:first-child {
+    border-left: 0!important;
+}
+
+tr td:last-child, tr th:last-child {
+    border-right: 0!important;
+}
+
+td, th {
+    text-align: right!important;
+}
+
+tfoot > tr {
+    border-top: double #0359b0;
+}
+
+tfoot > tr > th {
+    font-weight: normal;
+}
+
+thead > tr > th {
+    padding-top: .5rem!important;
+    padding-bottom: .5rem!important;
+}
+
+.navbar {
+    padding: .25rem .5rem;
+}
+
+.nav-item {
+    padding: 0;
+    margin: 0;
+}
+
+.dropdown-menu a.dropdown-item {
+    padding-left: .25rem;
+}
+
+.nav-link {
+    padding: .25rem 1rem;
+    margin: .25rem;
+}
+
+.container-fluid>.content {
+    padding: 0 1rem;
+}
+
+.top {
+    background-color: lightblue !important;
+    text-align: left !important;
+}
+
+.br {
+    border-right: 3px solid #0359b0!important;
+}
+
+.bl {
+    border-left: 3px solid #0359b0!important;
+}
+
+.dash {
+    color: #b7b7b6;
 }
 
 .table-hover tbody tr:hover {
