--- a/project/incomes/templates/incomes/includes/incomes_list.html
+++ b/project/incomes/templates/incomes/includes/incomes_list.html
@@ -1,4 +1,4 @@
-{% load buttons %}{% load humanize %}
+{% load humanize %}
 <table class="table table-striped table-hover">
     <thead class="thead-light">
         <th>Data</th>
