--- a/project/savings/templates/savings/includes/savings_list.html
+++ b/project/savings/templates/savings/includes/savings_list.html
@@ -1,4 +1,4 @@
-{% load buttons %}{% load humanize %}
+{% load humanize %}
 <table class="table table-striped table-hover">
     <thead class="thead-light">
         <th>Data</th>
