--- a/project/plans/templates/plans/index.html
+++ b/project/plans/templates/plans/index.html
@@ -2,9 +2,7 @@
 {% load buttons %}
 
 
-{% block head %}
-    <script src="https://code.jquery.com/ui/1.11.3/jquery-ui.min.js"></script>
-{% endblock head %}
+{% block head %}{% endblock head %}
 
 
 {% block content %}
