--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -2,13 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    {% load bootstrap4 %}
-    {% bootstrap_css %}
-    {% bootstrap_javascript jquery='full' %}
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
-      crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'css/app_global.css' %}">
+    <script type="text/javascript" src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/jquery-ui-1.11.3.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/popper1.14.3.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'bootstrap/js/bootstrap-4.4.1.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/moment-with-locales-2.9.0.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'bootstrap_datepicker/js/bootstrap-datetimepicker-4.17.47.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'bootstrap_datepicker_plus/js/datepicker-widget.js' %}"></script>
     <script src="{% static 'js/ajax.js' %}"></script>
+
+    <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap-4.4.1.min.css' %}" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css" integrity="sha256-zmfNZmXoNWBMemUOo1XUGFfc0ihGGLYdgtJS3KCr/l0=" crossorigin="anonymous" />
+    <link rel="stylesheet" href="{% static 'bootstrap_datepicker/css/bootstrap-datetimepicker-4.17.47.css' %}" />
+    <link rel="stylesheet" href="{% static 'bootstrap_datepicker_plus/css/datepicker-widget.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/app_global.css' %}" />
+
     {% block head %}{% endblock head %}
 
     <title>Bookkeeping</title>
