--- a/project/transactions/templates/transactions/index.html
+++ b/project/transactions/templates/transactions/index.html
@@ -1,8 +1,6 @@
 {% extends 'base.html' %}
 
-{% block head %}
-    <script src="https://code.jquery.com/ui/1.11.3/jquery-ui.min.js"></script>
-{% endblock head %}
+{% block head %}{% endblock head %}
 
 
 {% block content %}
