--- a/project/accounts/templates/accounts/includes/accounts_list.html
+++ b/project/accounts/templates/accounts/includes/accounts_list.html
@@ -1,6 +1,6 @@
 <div class="list-group mb-2">
     <div class="list-group-item list-group-item-action list-group-item-primary">Sąskaitos</div>
-    {% for item in categories %}
+    {% for item in items %}
     {% url 'accounts:accounts_update' item.id as url_update %}
     <div class="list-group-item list-group-item-action" data-url="{{ url_update }}">{{ item.title }}</div>
     {% endfor %}
