--- a/project/bookkeeping/templates/bookkeeping/includes/months_expense_type.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/months_expense_type.html
@@ -1,6 +1,6 @@
 {% load table_cell %}{% load template_filters %}
 
-<table class="table table-striped table-hover table-sm">
+<table class="table table-striped table-hover table-sm stats">
     <thead class="thead-light">
         <tr>
             <th colspan="{{ expense_types|length|add:1 }}" class="top">Metų balansas</th>
