--- a/project/bookkeeping/templates/bookkeeping/index.html
+++ b/project/bookkeeping/templates/bookkeeping/index.html
@@ -40,12 +40,12 @@
     <div class="col-lg-8">
         <!-- accounts stats -->
         <div class="row mt-2">
-            <div id="accounts_worth" class="col dblclick">{{ accounts }}</div>
+            <div id="accounts_worth" class="col">{{ accounts }}</div>
         </div>
 
         <!-- savings -->
         <div class="row mt-5">
-            <div id="saving_worth" class="col-lg-12 dblclick">{{ savings }}</div>
+            <div id="saving_worth" class="col-lg-12">{{ savings }}</div>
         </div>
     </div>
 </div>
