--- a/project/bookkeeping/templates/bookkeeping/includes/savings_worth_list.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/savings_worth_list.html
@@ -2,10 +2,12 @@
 
 <div class="row">
     <div class="col-lg-12">
-        {% savings_worth_table fund fund_totals label='<h6>Fondai</h6>' %}</div>
+        {% savings_worth_table fund fund_totals label='<h6>Fondai</h6>' %}
+    </div>
 </div>
 
 <div class="row mt-5">
     <div class="col-lg-12">
-        {% savings_worth_table pension pension_totals label='<h6>Pensija</h6>' %}</div>
+        {% savings_worth_table pension pension_totals label='<h6>Pensija</h6>' %}
+    </div>
 </div>
