--- a/project/bookkeeping/templates/bookkeeping/index.html
+++ b/project/bookkeeping/templates/bookkeeping/index.html
@@ -36,19 +36,18 @@
     </div>
 </div>
 
+<!-- accounts stats -->
 <div class="row mt-2">
-    <div class="col-lg-8">
-        <!-- accounts stats -->
-        <div class="row mt-2">
-            <div id="accounts_worth" class="col">{{ accounts }}</div>
-        </div>
-
-        <!-- savings -->
-        <div class="row mt-5">
-            <div id="saving_worth" class="col-lg-12">{{ savings }}</div>
-        </div>
-    </div>
+    <div id="accounts_worth" class="col-lg-8">{{ accounts }}</div>
+    <div class="col-lg-4"></div>
 </div>
+
+
+<!-- savings -->
+<div class="row mt-5">
+    <div id="saving_worth" class="col-lg-8">{{ savings }}</div>
+</div>
+
 
 <div class="modal fade" id="modal-form">
     <div class="modal-dialog modal-md">
