--- a/project/bookkeeping/templates/bookkeeping/index.html
+++ b/project/bookkeeping/templates/bookkeeping/index.html
@@ -39,8 +39,8 @@
 
 <!-- accounts stats -->
 <div class="row mt-2">
-    <div id="accounts_worth" class="col-md-7 mr-2">{{ accounts }}</div>
-    <div class="col-md-3 ml-2">
+    <div id="accounts_worth" class="col-md-7 pr-2">{{ accounts }}</div>
+    <div class="col-md-3 pl-2">
         <table class="table table-striped table-hover table-sm stats">
             <thead>
                 <tr class="top">
@@ -55,6 +55,48 @@
                     {% cell amount_end tag='th' %}
                     {% cell amount_balance tag='th' highlight_value=True %}
                 </tr>
+            </tfoot>
+        </table>
+    </div>
+
+    <div class="col-md-2">
+        <!-- Average Incomes -->
+        <table class="table table-striped table-hover table-sm stats">
+            <thead>
+                <tr class="top"><th>Vidutinė pajamos</th></tr>
+            </thead>
+            <tfoot>
+                <tr>{% cell avg_incomes tag='th' %}</tr>
+            </tfoot>
+        </table>
+
+        <!-- Average Expenses -->
+        <table class="table table-striped table-hover table-sm stats">
+            <thead>
+                <tr class="top"><th>Vidutinė išlaidos</th></tr>
+            </thead>
+            <tfoot>
+                <tr>{% cell avg_expenses tag='th' %}</tr>
+            </tfoot>
+        </table>
+
+        <!-- Money -->
+        <table class="table table-striped table-hover table-sm stats">
+            <thead>
+                <tr class="top"><th>Pinigai</th></tr>
+            </thead>
+            <tfoot>
+                <tr>{% cell amount_start tag='th' %}</tr>
+            </tfoot>
+        </table>
+
+        <!-- Worth -->
+        <table class="table table-striped table-hover table-sm stats">
+            <thead>
+                <tr class="top"><th>Turtas</th></tr>
+            </thead>
+            <tfoot>
+                <tr>{% cell amount_start|add:total_market tag='th' %}</tr>
             </tfoot>
         </table>
     </div>
