--- a/project/bookkeeping/templates/bookkeeping/index.html
+++ b/project/bookkeeping/templates/bookkeeping/index.html
@@ -57,6 +57,30 @@
                 </tr>
             </tfoot>
         </table>
+
+        <table class="table table-striped table-hover table-sm stats">
+            <thead>
+                <tr class="top">
+                    <th data-toggle="tooltip" data-html="true" data-placement="right" title="<p>Nebūtinos išlaidos, kurių galima atsisakyti:<br />- Darbas<br />- Laisvalaikis<br />- Paskolos<br />- Taupymas<br />- Transportas" style="border-left: 5px solid red!important;" class="text-left">{{ save_sum }}</th>
+                    <th>€ + F</th>
+                    <th>€ + F + P</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for item in no_incomes %}
+                <tr>
+                    <td>{% if item.label == 'money' %}Pinigai, € {% endif %}{% if item.label == 'no_cut' %}Nekeičiant išlaidų, mėn{% endif %}{% if item.label == 'cut' %}Sumažinus išlaidas, mėn{% endif %}</td>
+                    <td>{{ item.money_fund|floatformat:0 }}</td>
+                    <td>{{ item.money_fund_pension|floatformat:0 }}</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+        <p>
+            <b>€</b> - sąskaitose esantys pinigai<br />
+            <b>F</b> - Fondai<br />
+            <b>P</b> - Pensijų fondai
+        </p>
     </div>
 
     <div class="col-md-2">
@@ -116,7 +140,14 @@
 </div>
 
 <style>
-
+    .tooltip.show p {
+        text-align: left;
+    }
 </style>
+<script>
+    $(document).ready(function () {
+        $('[data-toggle="tooltip"]').tooltip();
+    });
+</script>
 {% endblock content %}
 
