table top row text wrapped in h1 tag h1 tag style

--- a/project/bookkeeping/templates/bookkeeping/includes/savings_worth_table.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/savings_worth_table.html
@@ -3,7 +3,7 @@
 <table class="table table-striped table-hover stats">
     <thead class="thead-light">
         <tr>
-            <th colspan="7" rowspan="2" class="top br">{% if label %}{{ label }}{% endif %}</th>
+            <th colspan="7" rowspan="2" class="top br">{% if label %}<h1>{{ label }}</h1>{% endif %}</th>
             <th colspan="4" class="text-center top">Pelnas/Nuostolis</th>
         </tr>
         <tr>
