--- a/project/bookkeeping/templates/bookkeeping/includes/savings_worth_list.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/savings_worth_list.html
@@ -2,12 +2,12 @@
 
 <div class="row">
     <div class="col-lg-12">
-        {% savings_worth_table fund fund_totals label='<h6>Fondai</h6>' %}
+        {% savings_worth_table fund fund_totals label='Fondai' %}
     </div>
 </div>
 
 <div class="row mt-5">
     <div class="col-lg-12">
-        {% savings_worth_table pension pension_totals label='<h6>Pensija</h6>' %}
+        {% savings_worth_table pension pension_totals label='Pensija' %}
     </div>
 </div>
