--- a/project/bookkeeping/templates/bookkeeping/includes/savings_worth_list.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/savings_worth_list.html
@@ -6,8 +6,10 @@
     </div>
 </div>
 
+{% if pension %}
 <div class="row mt-5">
     <div class="col-lg-12">
         {% savings_worth_table pension pension_totals label='Pensija' %}
     </div>
 </div>
+{% endif %}
