--- a/project/bookkeeping/templates/bookkeeping/includes/savings_worth_list.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/savings_worth_list.html
@@ -1,5 +1,6 @@
 {% load savings_worth %}
 
+{% if fund %}
 <div class="row">
     <div class="col-lg-12">
         {% savings_worth_table fund fund_totals label='Fondai' %}
@@ -12,4 +13,4 @@
         {% savings_worth_table pension pension_totals label='Pensija' %}
     </div>
 </div>
-{% endif %}
+{% endif %}{% endif %}
